@@ -90,6 +90,7 @@
                             <noHeaderFiles>true</noHeaderFiles>
                             <options>
                                 <option>--enable-native-access=javafx.graphics</option>
+                                <option>--enable-native-access=org.xerial.sqlitejdbc</option>
                                 <option>--enable-native-access=ALL-UNNAMED</option>
                                 <option>--sun-misc-unsafe-memory-access=allow</option>
                             </options>
